# GiantMIDI-Piano

./: .gitignore  README.md  pyproject.toml
src/giantmidi_piano/: __main__.py  audios_to_midis.py  calculate_statistics.py  config.py  create_split.py  dataset.py  evaluate_meta.py  evaluate_transcribed_midis.py  piano_detection_model.py  utilities.py
src/giantmidi_piano/cli/: convert.py  download.py  main.py  meta.py  root.py  split.py  stats.py  transcribe.py
